--- a/src/styles/Topic.scss
+++ b/src/styles/Topic.scss
@@ -81,14 +81,19 @@
 }
 
 .topic-title {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
-    margin: 0;
+    margin: 0 0 0.25rem;
     overflow-wrap: anywhere;
+}
+@media screen and (min-width: $media-bp-small) {
+    .topic-title {
+        margin: 0 0 1rem;
+    }
 }
 
 .topic-title-skeleton {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: bold;
     margin: 0.25rem;
     width: 70%;
@@ -120,7 +125,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    margin: 0.25rem;
+    margin: 0.25rem 0.75rem;
 }
 
 .topic-venue-icon,
