--- a/src/styles/SinglePost.scss
+++ b/src/styles/SinglePost.scss
@@ -237,7 +237,7 @@
     flex-direction: column;
     align-items: center;
     position: absolute;
-    right: 0;
+    margin-left: 1.5rem;
     border: 0.05rem solid $color-primary;
     border-radius: 0.2rem;
     box-sizing: border-box;
