--- a/src/styles/Topic.scss
+++ b/src/styles/Topic.scss
@@ -56,7 +56,7 @@
     position: relative;
     width: 100%;
     height: auto;
-    min-height: 3rem;
+    min-height: 4rem;
     margin-top: 0.5rem;
     background-color: white;
     border-top: 0.05rem solid $color-border;
@@ -83,13 +83,8 @@
 .topic-title {
     font-size: 2rem;
     font-weight: bold;
-    margin: 0 0 0.25rem;
+    margin: 0;
     overflow-wrap: anywhere;
-}
-@media screen and (min-width: $media-bp-small) {
-    .topic-title {
-        margin: 0 0 1rem;
-    }
 }
 
 .topic-title-skeleton {
@@ -382,6 +377,8 @@
 }
 
 .topic-source-link {
+    position: relative;
+    bottom: 0.5rem;
     height: 2.5rem;
     background-color: $color-primary;
     border-bottom: 0.05rem solid $color-border;
