--- a/src/styles/Post.scss
+++ b/src/styles/Post.scss
@@ -96,7 +96,7 @@
     min-height: 2.5rem;
     margin: 0 0.75rem;
 }
-@media screen and (max-width: 40em) {
+@media screen and (max-width: $media-bp-medium) {
     .post-form-buttons-container {
         flex-direction: column;
     }
