--- a/src/styles/SinglePost.scss
+++ b/src/styles/SinglePost.scss
@@ -55,8 +55,8 @@
 }
 @media screen and (min-width: $media-bp-medium) {
     .singlepost-photo-container {
-        width: 50%;
-        margin: 0.25rem;
+        width: 75%;
+        margin: 0.25rem 0;
         text-align: center;
     }
 }
