--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -49,7 +49,7 @@
     align-items: center;
     min-height: 2.5rem;
 }
-@media screen and (max-width: 40em) {
+@media screen and (max-width: $media-bp-medium) {
     .sendfeedback-buttons-container {
         flex-direction: column;
     }
